--- a/1.html
+++ b/1.html
@@ -1,21 +1,59 @@
 <!doctype html>
+
 <html>
 <head>
-<title>WEB1 - Psychology</title>
+<font size="7"><title>Intro-BTS</title></font size="7">
 <meta charset="utf-8">
-</haed>
+</head>
 <body>
-  <h1><a href="index.html">HOME</a></h1>
- <ol>
-  <li><a href="1.html"> Psychology</a></li>
-  <li><a href="2.html"> criminology</a></li>
-  <li><a href="3.html"> philosophy</a></li>
-</ol>
-<h2>Psychology</h2>
-<b><p>Psychology</b> is the science of behavior and mind, including conscious and unconscious phenomena, as well as feeling and thought. It is an academic discipline of immense scope and diverse interests that, when taken together, seek an understanding of the emergent properties of brains, and all the variety of epiphenomena they manifest.As a social science it aims to understand individuals and groups by establishing general principles and researching specific cases. In this field, aprofessional practitioner or researcher is called a psychologist and can be classified as a social, behavioral, or cognitive scientist.</p><p style="margin-top:45px;"> Psychologists attempt to understand the role of mental functions in individual and social behavior, while also exploring the physiological and biological processes that underlie cognitive functions and behaviors.
-Psychologists explore behavior and mental processes, including perception, cognition, attention, emotion (affect), intelligence, phenomenology, motivation (conation), brain functioning, and personality. This extends to interaction between people, such as interpersonal relationships, including psychological resilience, family resilience, and other areas. Psychologists of diverse orientations also consider the unconscious mind.[3] Psychologists employ empirical methods to infer causal and correlational relationships between psychosocial variables. In addition, or in opposition, to employing empirical and deductive methods, some—especially clinical and counseling psychologists—at times rely upon symbolic interpretation and other inductive techniques. Psychology has been described as a "hub science" in that medicine tends to draw psychological research via neurology and psychiatry, whereas social sciences most commonly draws directly from sub-disciplines within psychology.[4]
-While psychological knowledge is often applied to the assessment and treatment of mental health problems, it is also directed towards understanding and solving problems in several spheres of human activity. By many accounts psychology ultimately aims to benefit society.[5][6] The majority of psychologists are involved in some kind of therapeutic role, practicing in clinical, counseling, or school settings. Many do scientific research on a wide range of topics related to mental processes and behavior, and typically work in university psychology departments or teach in other academic settings (e.g., medical schools, hospitals). Some are employed in industrial and organizational settings, or in other areas[7] such as human development and aging, sports, health, and the media, as well as in forensic investigation and other aspects of law.</p>
-<b>-more view : <a href="https://www.psychologytoday.com/intl" target="_blank" title="html5 specification">click</a><b>
-<p><img src="cube.jpg" width="80%"></p>
+  <body vlink="#red"><font size=7><TT><h1><b><a href="1.html">BTS</h1><b></a></TT></font size=7>
+    <p>
+    <I><b><h2>WHAT IS BTS?</h2></B></I>
+  <hr>  <I><font SIZE="5">  BTS (Hangul: 방탄소년단; RR: Bangtan Sonyeondan), also known as the Bangtan Boys, is a seven-member South Korean boy band formed by Big Hit Entertainment. They debuted on June 12, 2013 with the song "No More Dream" from their first album 2 Cool 4 Skool. They won several New Artist of the Year awards for the track, including at the 2013 Melon Music Awards and Golden Disc Awards and the 2014 Seoul Music Awards. The band continued to rise to widespread prominence with their subsequent albums Dark & Wild (2014), The Most Beautiful Moment in Life, Part 2 (2015) and The Most Beautiful Moment in Life: Young Forever (2016), with the latter two entering the U.S. Billboard 200.
+       The Most Beautiful Moment in Life: Young Forever went on to win the Album of the Year award at the 2016 Melon Music Awards.</font size="5"></I>
+       <br></hr><hr></hr>
+<center><iframe width="850" height="355" src="https://www.youtube.com/embed/7C2z4GqqS5E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></cetner>
+<br>
+<center><font size="4">Their new music video "Fake Love"</center></font>
+<center>
+  <font size="4"><li><h3><a href="V.html">V</h3><b></a></li>
+  <li><h3><a href="JK.html">JK</h3><b></a></li>
+  <li><h3><a href="Sugar.html">Sugar</h3><b></a></li>
+  <li><h3><a href="RM.html">RM</h3><b></a></li>
+  <li><h3><a href="Jimin.html">Jimin</h3><b></a></li>
+  <li><h3><a href="J-Hope.html">J-Hope</h3><b></a></li>
+  <li><h3><a href="Jin.html">Jin</h3><b></a></li>
+
 </body>
-</html>
+<font size="4"></center>
+
+  <center>  <img src="bts.jpg" width="50%"> </center>
+  <center>  <img src="bts2.jpg" width="50%"> </center>
+  </P>
+  <p>
+    <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://ntm-1.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+
+  <center>  @All Pics from Google</center>
+<body background="white.jpg">
+  </body>
+  </html>
